apps/yermi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yermi
  labels:
    name: yermi
