apps/yermi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yermi
  namespace: yermi
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Yermi"
    gethomepage.dev/description: "Telegram Bot Dashboard"
    gethomepage.dev/icon: "telegram.png"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/weight: "40"
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - "yermi.ganam.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: yermi
          port: 80
          weight: 1
